--- a/index.html
+++ b/index.html
@@ -13,59 +13,59 @@
     <link rel="stylesheet" href="main_style.css" type="text/css">
 
     <!-- Google Fonts and Font-Awesome-->
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Encode+Sans+Condensed|Karla|Montserrat+Alternates|Prompt" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Encode+Sans+Condensed|Karla|Montserrat|Prompt" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  rel="stylesheet"/>
 
     <title>Ooshma Test</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar" class="scroll-area">
 
     <!-- NAVBAR SECTION-->
-    <div class="navbar bg-light navbar-light navbar-expand-sm fixed-top nav-styles">
+    <nav class="navbar bg-light navbar-light navbar-expand-md fixed-top nav-styles" id="navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">
+            <a href="index.html" class="navbar-brand pr-5">
                 <img src="./images/logo.jpg" alt="Logo" class="d-inline-block align-top logo-image"/>
             </a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-              <div class="container">
+              <div class="container pl-5">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a href="#home-section" class="nav-link">Home</a>
+                    <li class="nav-item px-md-2">
+                      <a href="#home-section" class="nav-link nav-link-styles">Home</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="#about-us-section" class="nav-link">About Us</a>
+                    <li class="nav-item px-md-2">
+                      <a href="#about-us-section" class="nav-link nav-link-styles">About Us</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#benefits-section" class="nav-link">Benefits of Solar</a>
+                    <li class="nav-item px-md-2">
+                        <a href="#benefits-section" class="nav-link nav-link-styles">Benefits of Solar</a>
                       </li>
-                    <li class="nav-item">
-                      <a href="#how-it-works-section" class="nav-link">How it Works</a>
+                    <li class="nav-item px-md-2">
+                      <a href="#how-solar-works-section" class="nav-link nav-link-styles">How it Works</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="#blog-section" class="nav-link">Blog</a>
+                    <li class="nav-item px-md-2">
+                      <a href="#blog-section" class="nav-link nav-link-styles">Blog</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#contact-us-section" class="nav-link">Contact</a>
+                    <li class="nav-item px-md-2">
+                        <a href="#contact-us-section" class="nav-link nav-link-styles">Contact</a>
                     </li>
                   </ul>
               </div>
             </div>
         </div>
-    </div>
+      </nav>
 
     <!--HOME SECTION-->
-    <header id="home-section">
+    <header id="home-section" data-spy="scroll" data-target="#navbar" data-offset="0">
       <div class="home-overlay">
         <div class="home-inner">
           <div class="container">
             <div class="row">
-              <div class="col text-center">
+              <div class="col-md-4 text-center mx-auto">
                 <h4 class="mt-5 mb-4">A new kind of Journey</h4>
-                <h1 class="mx-auto my-3 p-2">#solarenergy</h1>
+                <h1 class="my-3 p-2">#solarenergy</h1>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
     </header>
 
     <!--ABOUT US SECTION-->
-    <section id="about-us-section" class="py-5">
+    <section id="about-us-section" class="py-5" data-spy="scroll" data-target="#navbar" data-offset="0">
       <div class="container">
         <div class="row p-5">
           <div class="col-md-6">
