--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 
      <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    
+     
      <!-- Internal CSS -->
-    <link rel="stylesheet" href="main_style.css" type="text/css">
+    <link rel="stylesheet" href="css/main_style.css" type="text/css">
 
     <!-- Google Fonts and Font-Awesome-->
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Encode+Sans+Condensed|Karla|Montserrat|Prompt" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  rel="stylesheet"/>
 
-    <title>Ooshma Test</title>
+    <!--Favicon-->
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <title>Ooshma</title>
 </head>
 
 <body id='root'>
-
-    <!--Internal JS-->
-    <script src="services/sendMail.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html>
+    <script type="text/javascript" src="output.js"></script>
+</html><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script><script type="text/javascript" src="output.js"></script>
